--- a/media.html
+++ b/media.html
@@ -4,42 +4,62 @@
     <meta charset="UTF-8">
     <title>MEDIA // TROSTFRAUEN</title>
     <style>
-        /* Стиль такой же, как на главной */
-        body { background-color: #000; color: #ccc; font-family: "Courier New", monospace; margin: 20px; }
-        .container { max-width: 800px; margin: 0 auto; border: 2px solid #333; padding: 15px; }
-        nav { background: #111; padding: 5px; border: 1px solid #444; margin-bottom: 20px;}
-        nav a { color: #ff0000; text-decoration: none; margin-right: 15px; }
-        .section { border: 1px solid #444; padding: 15px; margin-bottom: 20px; }
-        h2 { color: #fff; border-bottom: 1px solid #555; }
-        .track { margin-bottom: 10px; padding: 5px; background: #050505; border-left: 3px solid #ff0000; }
+        html {
+            background-color: #000;
+            background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), 
+                              url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="150"><text x="0" y="30" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">DEATH IS NOT THE END TROSTFRAUEN VOID ECHOES</text><text x="20" y="80" fill="rgba(80,80,80,0.3)" font-family="monospace" font-size="12">STAY SILENT LISTEN TO THE STATIC RECALLING</text><text x="10" y="130" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">ARCHIVE_SYSTEM_ERROR_NULL_DATA</text></svg>');
+        }
+        body { color: #bbb; font-family: "Courier New", monospace; margin: 0; padding: 20px; }
+        .container { max-width: 800px; margin: 30px auto; border: 2px solid #444; background: #000; padding: 2px; }
+        .inner-border { border: 1px solid #222; padding: 20px; }
         
-        /* Стиль плеера */
-        audio { width: 100%; height: 30px; filter: invert(100%); margin-top: 5px; }
+        /* Кнопка Windows */
+        .win-button {
+            display: inline-block;
+            background: #c0c0c0;
+            color: #000;
+            padding: 5px 15px;
+            text-decoration: none;
+            font-family: "Arial", sans-serif;
+            font-size: 13px;
+            border-top: 2px solid #fff;
+            border-left: 2px solid #fff;
+            border-right: 2px solid #808080;
+            border-bottom: 2px solid #808080;
+            margin-bottom: 20px;
+        }
+        .win-button:active { border-top: 2px solid #808080; border-left: 2px solid #808080; border-right: 2px solid #fff; border-bottom: 2px solid #fff; }
+
+        .section { border: 1px inset #333; padding: 15px; margin-bottom: 20px; background: #0a0a0a; }
+        h2 { color: #eee; border-bottom: 1px solid #444; padding-bottom: 5px; font-size: 1.1em; }
+        .track { margin: 15px 0; padding: 10px; border-left: 3px solid #ff0000; background: #000; }
+        audio { width: 100%; height: 30px; filter: invert(100%); opacity: 0.7; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <nav>
-        [ <a href="index.html">Назад на главную</a> ]
-    </nav>
+    <div class="inner-border">
+        <nav>
+            <a href="index.html" class="win-button">HOME</a>
+        </nav>
 
-    <h1>МУЗЫКАЛЬНЫЙ АРХИВ</h1>
+        <h1>AUDIO_ARCHIVE</h1>
 
-    <div class="section">
-        <h2>/демо/</h2>
-        <div class="track">
-            <p>1. Название песни (Demo 2023)</p>
-            <audio controls src="music/demo1.mp3"></audio>
+        <div class="section">
+            <h2>/ DEMO /</h2>
+            <div class="track">
+                <p>> Track_01_Rec_2023.mp3</p>
+                <audio controls src="music/demo1.mp3"></audio>
+            </div>
         </div>
-    </div>
 
-    <div class="section">
-        <h2>/бутлеги/</h2>
-        <p>Записи с живых выступлений, восстановленные с кассет.</p>
-        <div class="track">
-            <p>Live in Basement (12.05.2024)</p>
-            <audio controls src="music/live1.mp3"></audio>
+        <div class="section">
+            <h2>/ BOOTLEGS /</h2>
+            <div class="track">
+                <p>> Live_at_Unknown_Location_2024.mp3</p>
+                <audio controls src="music/live1.mp3"></audio>
+            </div>
         </div>
     </div>
 </div>
