--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>TROSTFRAUEN // ARCHIVE</title>
     <style>
         /* Фоновый текстовый шум */
-        html {
-            background-color: #000;
-            background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9)), 
-                              url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100"><text x="0" y="20" fill="rgba(50,50,50,0.3)" font-family="monospace" font-size="10">DEATH IS NOT THE END TROSTFRAUEN VOID ECHOES</text><text x="10" y="50" fill="rgba(50,50,50,0.2)" font-family="monospace" font-size="10">STAY SILENT LISTEN TO THE STATIC RECALLING</text></svg>');
-        }
+       html {
+    background-color: #000;
+    background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), 
+                      url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="150"><text x="0" y="30" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">DEATH IS NOT THE END TROSTFRAUEN VOID ECHOES</text><text x="20" y="80" fill="rgba(80,80,80,0.3)" font-family="monospace" font-size="12">STAY SILENT LISTEN TO THE STATIC RECALLING</text><text x="10" y="130" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">ARCHIVE_SYSTEM_ERROR_NULL_DATA</text></svg>');
+}
 
         body {
             color: #bbb;
