--- a/index.html
+++ b/index.html
@@ -2,130 +2,29 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>TROSTFRAUEN // ARCHIVE</title>
+    <title>TROSTFRAUEN // ACCESS</title>
     <style>
-        /* Фоновый текстовый шум */
-       html {
-    background-color: #000;
-    background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), 
-                      url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="150"><text x="0" y="30" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">DEATH IS NOT THE END TROSTFRAUEN VOID ECHOES</text><text x="20" y="80" fill="rgba(80,80,80,0.3)" font-family="monospace" font-size="12">STAY SILENT LISTEN TO THE STATIC RECALLING</text><text x="10" y="130" fill="rgba(80,80,80,0.4)" font-family="monospace" font-size="12">ARCHIVE_SYSTEM_ERROR_NULL_DATA</text></svg>');
-}
-
-        body {
-            color: #bbb;
-            font-family: "Courier New", Courier, monospace;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.5;
+        html {
+            background-color: #000;
+            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), 
+                              url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="150"><text x="0" y="30" fill="rgba(120,120,120,0.5)" font-family="monospace" font-size="12">DEATH IS NOT THE END TROSTFRAUEN VOID ECHOES</text><text x="20" y="80" fill="rgba(120,120,120,0.4)" font-family="monospace" font-size="12">STAY SILENT LISTEN TO THE STATIC RECALLING</text></svg>');
         }
-
-        .container {
-            max-width: 700px;
-            margin: 50px auto;
-            background: #000;
-            border: 2px solid #444;
-            padding: 2px; /* Отступ для внутренней рамки */
-        }
-
-        .inner-border {
-            border: 1px solid #222;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            border-bottom: 1px solid #444;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-        }
-
-        h1 {
-            letter-spacing: 5px;
-            color: #eee;
-            margin-bottom: 5px;
-        }
-
-        .sub-header {
-            font-size: 0.9em;
-            color: #666;
-            text-transform: uppercase;
-        }
-
-        /* Объемная кнопка Windows 95 */
+        body { color: #bbb; font-family: "Courier New", monospace; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
         .win-button {
-            display: inline-block;
-            background: #c0c0c0;
-            color: #000;
-            padding: 5px 15px;
-            text-decoration: none;
-            font-family: "Arial", sans-serif;
-            font-size: 13px;
-            border-top: 2px solid #fff;
-            border-left: 2px solid #fff;
-            border-right: 2px solid #808080;
-            border-bottom: 2px solid #808080;
-            margin-bottom: 20px;
+            display: inline-block; background: #c0c0c0; color: #000; padding: 10px 30px;
+            text-decoration: none; font-family: "Arial", sans-serif; font-size: 16px; font-weight: bold;
+            border-top: 2px solid #fff; border-left: 2px solid #fff;
+            border-right: 2px solid #808080; border-bottom: 2px solid #808080;
         }
-
-        .win-button:active {
-            border-top: 2px solid #808080;
-            border-left: 2px solid #808080;
-            border-right: 2px solid #fff;
-            border-bottom: 2px solid #fff;
-        }
-
-        .content-box {
-            background: #0a0a0a;
-            border: 1px inset #333;
-            padding: 15px;
-            margin-top: 20px;
-        }
-
-        footer {
-            margin-top: 40px;
-            font-size: 0.7em;
-            color: #444;
-            text-align: center;
-        }
-
-        /* Случайный текст по бокам (декоративный) */
-        .side-text {
-            position: fixed;
-            font-size: 10px;
-            color: #222;
-            width: 100px;
-            word-wrap: break-word;
-            z-index: -1;
-        }
+        .win-button:active { border-top: 2px solid #808080; border-left: 2px solid #808080; border-right: 2px solid #fff; border-bottom: 2px solid #fff; }
+        .warning { text-align: center; }
+        h1 { letter-spacing: 10px; color: #fff; margin-bottom: 30px; }
     </style>
 </head>
 <body>
-
-<div class="side-text" style="top: 100px; left: 20px;">SYSTEM_FAILURE RECORD_0991 NO_SIGNAL</div>
-<div class="side-text" style="bottom: 100px; right: 20px;">ENDLESS_ARCHIVE_TROSTFRAUEN_NULL</div>
-
-<div class="container">
-    <div class="inner-border">
-        <header>
-            <h1>TROSTFRAUEN</h1>
-            <div class="sub-header">-- established for eternity --</div>
-        </header>
-
-        <nav>
-            <a href="index.html" class="win-button">HOME</a>
-        </nav>
-
-        <div class="content-box">
-            <p>Добро пожаловать в официальный цифровой монумент Trostfrauen.</p>
-            <p>Этот ресурс содержит восстановленные фрагменты аудиозаписей и визуальных образов. Мы не гарантируем целостность данных.</p>
-        </div>
-
-        <footer>
-            [ ARCHIVE STATUS: OPERATIONAL ]<br>
-            &copy; 2024-2026 TROSTFRAUEN
-        </footer>
+    <div class="warning">
+        <h1>TROSTFRAUEN</h1>
+        <a href="menu.html" class="win-button">START SYSTEM</a>
     </div>
-</div>
-
 </body>
 </html>
