--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
 
 <div class="container">
     <nav>
-        [ <a href="index.html">Главная</a> ]
+        [ <a href="menu.html">Главная</a> ]
         [ <a href="media.html">Медиа</a> ]
     </nav>
 
