--- a/media.html
+++ b/media.html
@@ -41,7 +41,7 @@
 <div class="container">
     <div class="inner-border">
         <nav>
-            <a href="menu.html" class="win-button">HOME</a>
+           <a href="menu.html" class="win-button">BACK_TO_MENU</a>
         </nav>
 
         <h1>AUDIO_ARCHIVE</h1>
